Display reservations and persistent volumes in /offers debug http endpoint
Bugs closed: AURORA-1736

Reviewed at https://reviews.apache.org/r/50052/